= CHANGELOG

== Roadmap - 0.4

// tag::changelog[]
=== Features

* https://github.com/ysb33r/grolifant/issues/12[#12] - `AbstractWrappedToolExecution`.
* https://github.com/ysb33r/grolifant/issues/13[#13] - Utilise Worker API access when available.
* https://github.com/ysb33r/grolifant/issues/14[#14] - Base class for installable tool extensions
* https://github.com/ysb33r/grolifant/issues/15[#15] - New exceptions classes

// end::changelog[]

== 0.3.2

=== Bugs

* https://github.com/ysb33r/grolifant/issues/10[#10] - Detect 64-bit architecture correctly under Windows.

== 0.3.1

=== Bugs

* https://github.com/ysb33r/grolifant/issues/9[#9] - Handle pre-configured execution specifications in project extensions aliases.

== 0.3

=== Features
* https://github.com/ysb33r/grolifant/issues/8[#8] - Provides `AbstractToolExecTask`, `ResolvedExecutable`.
* New `ClosureUtils` class to help dealing with common Closure use cases in Gradle plugins such as configuration.
* New `MapUtils` class to help dealing with property maps such as lazy evaluation of values.
* Supports Gradle 4.0

=== Other

* Support for Gradle version older than 2.8 has been dropped. It is no longer time-effective to try and cope with specifics of the older Groovy version in these releases.

== 0.2

=== Features
* https://github.com/ysb33r/grolifant/issues/5[#5] - Operating system methods and properties

=== Other
* https://github.com/ysb33r/grolifant/issues/1[#1] - `CompatibilityInstallerSpec` is failing under Windows.
* https://github.com/ysb33r/grolifant/issues/2[#2] - `gradleTest` is failing under Travis CI after a number of tests.
* https://github.com/ysb33r/grolifant/issues/3[#3] - `gradleTest` runs out of Permgen space on Appveyor.
* https://github.com/ysb33r/grolifant/issues/1[#6] - Support for Gradle 3.3, 3.4, 3.5.

== 0.1

* Distribution Installer base class.
* `StringUtils.stringize` - convert object or closure to a string.
* `UriUtils.urize` - convert object or closure to a URI.