@@ -151,7 +151,7 @@ gradleTest {
     versions '2.8', '2.9', '2.10', '2.11'
     versions '2.12', '2.13', '2.14.1'
     versions '3.0', '3.1', '3.2.1', '3.3', '3.4', '3.5'
-    versions '4.0'
+    versions '4.0', '4.1', '4.2'
     // end::gradleTestVersions[]
 
     systemProperties GROLIFANT_VERSION_UNDER_TEST : jar.archivePath.absolutePath
