@@ -9,6 +9,7 @@
 * https://github.com/ysb33r/grolifant/issues/13[#13] - Utilise Worker API access when available.
 * https://github.com/ysb33r/grolifant/issues/14[#14] - Base class for installable tool extensions
 * https://github.com/ysb33r/grolifant/issues/15[#15] - New exceptions classes
+* https://github.com/ysb33r/grolifant/issues/20[#20] - `ProgressLogger` functionality that can be used for downloads
 
 // end::changelog[]
 
